<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="enter_weight">Enter Weight In KG</string>
    <string name="enter_height">Enter Height In CM</string>
    <string name="btn_Calculate_BMI">Calculate</string>
    <string name="txt_BMI">Your BMI is :</string>
    <string name="BMI_MessageShownHere">Result</string>
    <string name="itemAboutApp">About App</string>
    <string name="ItemExit">Exit</string>
    <string name="Settings">BMI Chart</string>
    <string name="aboutappText">BMI(BODY MASS INDEX) Calculator prompts the user to enter weight in Kilogram and height in Centimeter to check the user is normal,underweight,overweight or obese.\n\nCreated by: Rahul Kumar</string>
    <string name="txt_formula_to_calculate_bmi">Metric BMI Formula</string>
    <string name="txt_information_about_bmi">Information About BMI</string>

</resources>